--- a/src/components/Replies/replies.module.scss
+++ b/src/components/Replies/replies.module.scss
@@ -90,3 +90,34 @@
   margin-left: 7%;
   padding-left: 3%;
 }
+
+.addComment {
+  margin-top: 32px;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1.5rem;
+}
+
+.commentInput {
+  width: 100%;
+  min-height: 100px;
+  border: 1px solid #dfe3fa;
+  border-radius: 4px;
+  padding: 8px;
+  margin-bottom: 8px;
+}
+
+.commentFooter {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.postComment {
+  background: #4661e6;
+  border: none;
+  color: #fff;
+  padding: 8px 16px;
+  border-radius: 4px;
+  cursor: pointer;
+}
